--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <div id="outer">
-<div id="header"><div id="head-inner"><h1>ホームページタイトル</h1>
-<p class="description">ホームページの説明文</p></div>
+<div id="header"><div id="head-inner"><h1>ホームページ</h1>
+<p class="description">説明文</p></div>
 </div>
 <div id="contents">
 <h2>記事ページ見出し・大</h2>
